--- a/style.css
+++ b/style.css
@@ -1,4 +1,20 @@
-.large {
+.wrapper {
 	text-align: center;
-	font-family: sans-serif;
+}
+
+.large-text {
+	font-size: 50px;
+	font-family: 'Roboto';
+	font-weight: bold;
+	color: white;
+	background-color: black;
+	
+}
+
+.site-wrapper {
+	background-color: black;
+}
+
+html {
+	background-color: black;
 }
