--- a/style.css
+++ b/style.css
@@ -1,20 +1,19 @@
 .wrapper {
 	text-align: center;
+	max-width: 900px;
+	height: 300px;
+	background-color: #333;
+	margin-top: 30px;
+	box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
 }
 
 .large-text {
 	font-size: 50px;
 	font-family: 'Roboto';
 	font-weight: bold;
-	color: white;
-	background-color: black;
-	
+	color: #eee;
 }
 
-.site-wrapper {
-	background-color: black;
-}
-
-html {
-	background-color: black;
+body {
+	background-color: #777;
 }
