--- a/style.css
+++ b/style.css
@@ -2,9 +2,14 @@
 	text-align: center;
 	max-width: 900px;
 	height: 300px;
-	background-color: #333;
+	background-color: #7ab;
 	margin-top: 30px;
-	box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+	margin-left: auto;
+	margin-right: auto;
+	padding: 20px;
+	border-radius: 4px;
+	
 }
 
 .large-text {
