--- a/style.css
+++ b/style.css
@@ -1,24 +1,60 @@
-.wrapper {
+body {
+	margin: 0;
+}
+
+
+* {
+	font-family: Roboto, sans-serif;
 	text-align: center;
-	max-width: 900px;
-	height: 300px;
-	background-color: #7ab;
-	margin-top: 30px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+	color: #333;
+}
+.title {
+	font-size: 50px;
+	margin-bottom: 40px;
+	margin-top: 20px;
+	font-family: Montserrat, sans-serif;
+	font-weight: 500;
+}
+a {
+	color: #55f;
+	text-decoration: none;
+}
+
+.tableContainer {
+	display: table;
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	pointer-events: none;
+}
+
+.cellContainer {
+	display: table-cell;
+	vertical-align: middle;
+	pointer-events: none;
+}
+
+.innerContainer {
 	margin-left: auto;
 	margin-right: auto;
-	padding: 20px;
-	border-radius: 4px;
-	
+	max-width: 400px;
+	background-color: rgba(255, 255, 255, 0.7);
+	box-shadow: 0 0 60px 30px rgba(255, 255, 255, 0.7);
+	border-radius: 100px;
+	padding: 10px;
+	pointer-events: none;
 }
 
-.large-text {
-	font-size: 50px;
-	font-family: 'Roboto';
-	font-weight: bold;
-	color: #fff;
-}
-
-body {
-	background-color: #777;
+#particles-js {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+  z-index: -5;
 }
