--- a/style.css
+++ b/style.css
@@ -10,14 +10,14 @@ body {
 }
 .title {
 	font-size: 50px;
-	margin-bottom: 40px;
-	margin-top: 20px;
+	margin-bottom: 10px;
+	margin-top: 1px;
 	font-family: Montserrat, sans-serif;
 	font-weight: 500;
 }
-a {
-	color: #55f;
-	text-decoration: none;
+.text {
+	color: #777;
+	font-size: 16px;
 }
 
 .tableContainer {
@@ -42,6 +42,7 @@ a {
 	box-shadow: 0 0 60px 30px rgba(255, 255, 255, 0.7);
 	border-radius: 100px;
 	padding: 10px;
+	margin-bottom: 30px;
 	pointer-events: none;
 }
 
